--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
+Click==7.0
+Flask==1.1.1
+flaskwebgui==0.1.6
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
 numpy==1.18.1
 opencv-python==4.2.0.32
+playsound==1.2.2
+psutil==5.6.7
+pyttsx3==2.81
+Werkzeug==1.0.0
+whichcraft==0.6.1
